[package]
name = "pty-test"
version = "0.1.0"
authors = ["Matthew Taylor <taylor@cyberbacon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17"
libc = { version = "0.2.60", features = [ "extra_traits" ] }